--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,6 @@
 .DS_Store
+.bundle/*
+Gemfile.lock
 log/*
 tmp/**/*
 config/application.rb
@@ -13,3 +15,4 @@ public/javascripts/cached_*
 public/stylesheets/cached_*
 public/system/
 tags
+*.swp
